@labkey/components update broke jest tests 1. updated @labkey/api 2. added local LoadingSpinner.jsx component and style 3. updated tests and snapshots

--- a/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
+++ b/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
@@ -2,6 +2,7 @@
 @import "../../Shared/styles/components/infoPanel";
 @import "../../Shared/styles/components/shared";
 @import "../../Shared/styles/components/summaryGridPanel";
+@import "../../Shared/styles/components/loadingSpinner";
 @import "../../Shared/styles/formatting/panels";
 @import "../../Shared/styles/formatting/wizard";
 
