--- a/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
@@ -5,6 +5,7 @@
 @import "../../Shared/styles//components/modal";
 @import "../../Shared/styles/components/shared";
 @import "../../Shared/styles/components/infoPanel";
+@import "../../Shared/styles/components/loadingSpinner";
 @import "../../Shared/styles/components/summaryGridPanel";
 @import "./components/speciesPanel";
 @import "./components/locationPanel";
