--- a/snprc_ehr/src/client/BirthRecordReport/styles/birthRecordReport.scss
+++ b/snprc_ehr/src/client/BirthRecordReport/styles/birthRecordReport.scss
@@ -4,6 +4,7 @@
 @import "../../Shared/styles/components/shared";
 @import "../../Shared/styles/components/infoPanel";
 @import "../../Shared/styles/components/summaryGridPanel";
+@import "../../Shared/styles/components/loadingSpinner";
 
 
 .right-panel {
