--- a/snprc_ehr/src/client/Shared/styles/formatting/_wizard.scss
+++ b/snprc_ehr/src/client/Shared/styles/formatting/_wizard.scss
@@ -55,3 +55,8 @@
   padding: 5px 1rem 0 1rem;
   vertical-align: middle;
 }
+.wizard-panel-col {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
