Update labkey/components version and scss updates

--- a/snprc_ehr/src/client/SndEventsViewer/styles/sndEventsViewer.scss
+++ b/snprc_ehr/src/client/SndEventsViewer/styles/sndEventsViewer.scss
@@ -4,7 +4,7 @@
 @import "../../Shared/styles/components/shared";
 @import "../../Shared/styles/components/infoPanel";
 @import "../../Shared/styles/components/loadingSpinner";
-
+@import "~@labkey/components/dist/assets/scss/theme";
 
 .right-panel {
     flex: 1;
