--- a/snprc_ehr/src/client/Shared/styles/settings.scss
+++ b/snprc_ehr/src/client/Shared/styles/settings.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/_variables";
+
 // Colors
 $dark-gray: #333333;
 $light-gray: #999;
@@ -11,11 +13,18 @@ $info-light-red: #e06d6d;
 $info-blue: #100796;
 $tooltip-yellow: #e7e693;
 $info-green: #7aec76c2;
+
 // Font Size
+// Base values
+// Set font-size-large/small by setting the base
+// https://getbootstrap.com/docs/4.3/content/typography/#global-settings
+$font-size-base: 16px;
+// font-size-large/small conflicts with BS variables by same name.  Need to use px if wanting to override.
+// https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_variables.scss#L52
 $font-size-xlarge: 3.6rem;
-$font-size-large: 1.8rem;
+//$font-size-large: 1.8rem;
 $font-size-medium: 1.6rem;
-$font-size-small: 1.4rem;
+//$font-size-small: 1.4rem;
 $font-size-xsmall: 1.2rem;
 // Spacing
 $m-size: 1.6rem;
