Additional commits for SSRS Reporting dev

--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -120,6 +120,10 @@
                         {
                             name: 'New Animal Wizard',
                             url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/NewAnimalWizard.view?'
+                        },
+                        {
+                            name: 'PDF Reports',
+                            url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/SsrsReporting.view?'
                         }
                     ]
                 })
