--- a/snprc_ehr/src/client/SsrsReporting/styles/ssrsReporting.scss
+++ b/snprc_ehr/src/client/SsrsReporting/styles/ssrsReporting.scss
@@ -33,3 +33,11 @@
 .info-div {
     padding: 0;
 }
+
+.form-input {
+    display: block;
+    width: 25rem;
+    height: 3rem;
+    border-radius: 3px;
+    padding-left: .8rem;
+}
