Renamed font classes to avoid naming conflicts with bootstrap-sass

--- a/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
+++ b/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
@@ -13,14 +13,14 @@
     background-color: $info-green;
     border: 1px solid $info-green;
     border-radius: 3px;
-    font-size: $font-size-large;
+    font-size: $font-sz-large;
     color: $dark-blue;
 }
 
-.url-span { 
+.url-span {
     color: $button-blue;
     text-decoration: underline;
- } 
+ }
 
  .button-row {
      padding: 1rem 1rem 2rem 1rem
