--- a/snprc_ehr/src/client/NewAnimalPage/styles/components/_acquisitionPanel.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/components/_acquisitionPanel.scss
@@ -4,11 +4,11 @@
   border-radius: 5px;
   border: 1px solid $light-gray;
   margin: 0 0 0 11px;
-  padding: $s-size $s-size $s-size $xs-size; 
+  padding: $s-size $s-size $s-size $xs-size;
   width: 6.5rem;
   height: 20px;
   font-family: helvetica, Arial, sans-serif;
-  font-size: $font-size-small;
+  font-size: $font-sz-small;
 }
 .acq-input:disabled {
      opacity: .5;
