--- a/snprc_ehr/src/client/Shared/styles/base/_base.scss
+++ b/snprc_ehr/src/client/Shared/styles/base/_base.scss
@@ -7,7 +7,7 @@ html {
 
 body {
     font-family: helvetica, Arial, sans-serif;
-    font-size: $font-size-small;
+    font-size: $font-sz-small;
 }
 
 button {
