--- a/snprc_ehr/src/client/Shared/styles/components/_infoPanel.scss
+++ b/snprc_ehr/src/client/Shared/styles/components/_infoPanel.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     text-align: left;
-    font-size: $font-size-small;
+    font-size: $font-sz-small;
     color: $dark-blue;
     margin: auto 0 1rem 1rem;
     padding: 1rem 1rem 0 1rem;
@@ -31,7 +31,7 @@
     // background-color: $disabled-gray;
     // border: 1px solid $info-red;
     // border-radius: 3px;
-    
+
     color: black;
     padding: 0.2rem;
 }
