--- a/snprc_ehr/src/client/SsrsReporting/styles/ssrsReporting.scss
+++ b/snprc_ehr/src/client/SsrsReporting/styles/ssrsReporting.scss
@@ -17,7 +17,7 @@
 .field-label {
     text-align-last: start;
     margin: 0.5rem $s-size 0.2rem $s-size;
-    font-size: $font-size-small;
+    font-size: $font-sz-small;
     width: 15rem;
 }
 
