Continuation of chip reader dev 1. Added Chip Ids to Summary grid if animal is not found in DB lookup 2. Refactored fetchAnimalId.js to return "Not Found" record for animals not found in DB lookup 3. Moved readTimeout value to constants object 4. Removed chip data prefix (100000) from Biomark chips 5. Removed trailing commas from certain UID chips 6. Replaced TextDecoderStream() in serialService.ja with inline transformation of UInt8Array data    - filtering for printable characters only    - Biomark chips include "STX" (Start of Text) marker in data 7. Refactored connection close method to handle edge cases 8. Tweaked summary grid CSS 9. Updated SummaryGridPanel snapshot

--- a/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
+++ b/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
@@ -29,5 +29,6 @@
  .id-table-scroll {
     overflow-y: auto;
     min-height: 24.5rem;
+    max-height: 50rem;
     padding: 0, 0.1rem !important;
 }
