moved PDF reports link

--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -107,7 +107,8 @@
                     //{name: 'Animal Groups', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr&query.queryName=animal_groups&query.viewName=Active Groups'},
                     { name: 'Colony Overview', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/colonyOverview.view?' },
                     { name: 'Room Utilization', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=roomUtilization' },
-                    { name: 'More Reports', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/moreReports.view?' }
+                    { name: 'More Reports', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/moreReports.view?' },
+                    { name: 'PDF Reports', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/SsrsReporting.view?' }
                 ]
             }, {
                 ...(currentUserGroups.find(o => (o.name === 'SNPRC Colony Admins')) && {
@@ -120,10 +121,6 @@
                         {
                             name: 'New Animal Wizard',
                             url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/NewAnimalWizard.view?'
-                        },
-                        {
-                            name: 'PDF Reports',
-                            url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/SsrsReporting.view?'
                         }
                     ]
                 })
