--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -16,6 +16,7 @@
                 xtype: 'ldk-singlesubjectfiltertype',
                 inputValue: LDK.panel.SingleSubjectFilterType.filterName,
                 label: 'Single Animal',
+                caseInsensitive: true,
                 aliasTable: {
                     schemaName: 'study',
                     queryName: 'validIdAndAlias',
@@ -26,6 +27,7 @@
                 xtype: 'ehr-multianimalfiltertype',
                 inputValue: EHR.panel.MultiAnimalFilterType.filterName,
                 label: EHR.panel.MultiAnimalFilterType.label,
+                caseInsensitive: true,
                 searchOptions: {
                     room: false,
                     cage: false,
