added tabs to colony overview page

--- a/snprc_ehr/resources/views/colonyOverview.html
+++ b/snprc_ehr/resources/views/colonyOverview.html
@@ -20,6 +20,20 @@
                         xtype: 'snprc-colonyusagepanel',
                         filterArray: [LABKEY.Filter.create('species_code', 'PC', LABKEY.Filter.Types.EQUALS)]
                     }]
+                },{
+                    title: 'Rhesus Monkey Colony',
+                    itemId: 'rhesusMonkey',
+                    items: [{
+                        xtype: 'snprc-colonyusagepanel',
+                        filterArray: [LABKEY.Filter.create('species_code', 'MM', LABKEY.Filter.Types.EQUALS)]
+                    }]
+                },{
+                    title: 'Marmoset Colony',
+                    itemId: 'marmoset',
+                    items: [{
+                        xtype: 'snprc-colonyusagepanel',
+                        filterArray: [LABKEY.Filter.create('species_code', 'CJ', LABKEY.Filter.Types.EQUALS)]
+                    }]
                 }];
             }
         }).render(webpart.wrapperDivId);
