changed Rhesus tab to say 'Rhesus Colony'

--- a/snprc_ehr/resources/views/colonyOverview.html
+++ b/snprc_ehr/resources/views/colonyOverview.html
@@ -21,7 +21,7 @@
                         filterArray: [LABKEY.Filter.create('species_code', 'PC', LABKEY.Filter.Types.EQUALS)]
                     }]
                 },{
-                    title: 'Rhesus Monkey Colony',
+                    title: 'Rhesus Colony',
                     itemId: 'rhesusMonkey',
                     items: [{
                         xtype: 'snprc-colonyusagepanel',
