--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -12,7 +12,7 @@
             defaultTab: 'General',
             showFilterOptionsTitle: true,
             showReportsOption:true,
-            caseInsensitive: true,
+            caseInsensitiveSubjects: true,
             filterTypes: [{
                 xtype: 'ldk-singlesubjectfiltertype',
                 inputValue: LDK.panel.SingleSubjectFilterType.filterName,
