Animal history case insensitive variable (#519)
* move case insensitive option to top level in animal history

--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -12,11 +12,11 @@
             defaultTab: 'General',
             showFilterOptionsTitle: true,
             showReportsOption:true,
+            caseInsensitiveSubjects: true,
             filterTypes: [{
                 xtype: 'ldk-singlesubjectfiltertype',
                 inputValue: LDK.panel.SingleSubjectFilterType.filterName,
                 label: 'Single Animal',
-                caseInsensitive: true,
                 aliasTable: {
                     schemaName: 'study',
                     queryName: 'validIdAndAlias',
@@ -27,7 +27,6 @@
                 xtype: 'ehr-multianimalfiltertype',
                 inputValue: EHR.panel.MultiAnimalFilterType.filterName,
                 label: EHR.panel.MultiAnimalFilterType.label,
-                caseInsensitive: true,
                 searchOptions: {
                     room: false,
                     cage: false,
