Added FK columns for u24MarmosetStats

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -390,6 +390,42 @@
                 schemaName: 'ehr_lookups',
                 queryName: 'obscan_reason',
                 pk: 'value'
+            }, {
+                label: 'U24 Status',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'u24_status',
+                pk: 'value'
+            }, {
+                label: 'U24 Current Housing Status',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'u24_current_housing_status',
+                pk: 'value'
+            }, {
+                label: 'U24 Infant History',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'u24_infant_history',
+                pk: 'value'
+            }, {
+                label: 'U24 medical history',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'u24_medical_history',
+                pk: 'value'
+            }, {
+                label: 'U24 Fertility Status',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'u24_fertility_status',
+                pk: 'value'
+            }, {
+                label: 'U24 Available to Transfer',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'u24_available_to_transfer',
+                pk: 'value'
             }
 
         ];
