fixed view name

--- a/snprc_ehr/resources/views/clinicalHistoryExport.view.xml
+++ b/snprc_ehr/resources/views/clinicalHistoryExport.view.xml
@@ -1,4 +1,4 @@
-<view xmlns="http://labkey.org/data/xml/view" frame="none" template="print" title="Clinical History Export">
+<view xmlns="http://labkey.org/data/xml/view" frame="none" template="print" title="TAC Clinical History Export">
     <dependencies>
         <dependency path="ehr.context" />
         <!--<dependency path="ehr/printFormatting.css" />-->
