added ehr changes to snprc export

--- a/snprc_ehr/resources/views/clinicalHistoryExport.html
+++ b/snprc_ehr/resources/views/clinicalHistoryExport.html
@@ -74,6 +74,8 @@
         Ext4.create('Ext.panel.Panel', {
             border: false,
             style: 'width: 8in;',
+            cls: 'clinical-history-print',
+            bodyCls: 'clinical-history-print',
             items: toAdd
         }).render(webpart.wrapperDivId);
     });
