--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -136,7 +136,12 @@
                             name: 'Packages and Projects',
                             url: '<%=contextPath%>/snd' + ctx['EHRStudyContainer'] + '/app.view?'
                         },
-                        { name: 'Manage SND Lookups', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/editSndLookups.view' }
+                        //{ name: 'Manage SND Lookups', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/editSndLookups.view' }
+                        { name: 'Manage SND Lookups', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/editSndLookups.view' },
+                        {
+                            name: 'Snd Lookups Management',
+                            url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/SndLookupsManagement.view?'
+                        }
                     ]
                 })
             }
