modularized react components

--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -139,7 +139,7 @@
                         //{ name: 'Manage SND Lookups', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/editSndLookups.view' }
                         { name: 'Manage SND Lookups', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/editSndLookups.view' },
                         {
-                            name: 'Snd Lookups Management',
+                            name: 'SND Lookups Management',
                             url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/SndLookupsManagement.view?'
                         }
                     ]
