--- a/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
+++ b/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
@@ -1,6 +1,11 @@
-.panel {
+
+.grid-panel__grid {
   //box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  height: 50vh; width: 100%;
   overflow: scroll;
-  height: 74.5vh; width: 100%;
   z-index: 1; top: 0; left: 0; transition: .5s ease; overflow-x: hidden;  align-items: center;
+}
+thead {
+  position: sticky;
+  top: 0;
 }
