--- a/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
+++ b/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
@@ -1,5 +1,10 @@
 @import '@labkey/components/dist/assets/scss/variables';
 
+.lk-header-ct {
+  position: sticky;
+  top: 0;
+}
+
 .lk-body-title {
   width: 60%;
   transform: translate(13.7%, 40%);
@@ -29,7 +34,7 @@
 
 .grid-panel__grid .table-responsive {
   overflow: scroll;
-  height: 51vh; width: 100%;
+  height: 60vh; width: 100%;
   z-index: 1; top: 0; left: 0; transition: .5s ease; align-items: center;
 }
 .grid-panel__grid .table-responsive thead {
