upgraded labkey/components and build

--- a/snprc_ehr/src/client/Shared/styles/components/_shared.scss
+++ b/snprc_ehr/src/client/Shared/styles/components/_shared.scss
@@ -30,11 +30,12 @@
   margin: 0 !important;
 }
 
-.shared-select__value-container {
+.shared-select__input-container {
   height: 28px;
   padding-bottom: 0px !important;
-  margin: 0, 10px;
+  //margin-top: -10px !important;
 }
+
 .shared-select__single-value {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
@@ -47,3 +48,6 @@
 .shared-select__option {
   padding: .4rem !important;
 }
+  .shared-select__single-value, .shared-select__placeholder, .shared-select__input {
+    margin-top: -10px !important;
+  }
