--- a/snprc_ehr/src/client/Shared/styles/components/_wrappedDatePicker.scss
+++ b/snprc_ehr/src/client/Shared/styles/components/_wrappedDatePicker.scss
@@ -14,6 +14,7 @@
 
 .react-datepicker-wrapper {
     padding-left: 1rem;
+    width: auto;
 }
 .react-datepicker__input-container,
 .react-datepicker__input-container input {
